--- a/frontend/4dathome-app/package.json
+++ b/frontend/4dathome-app/package.json
@@ -30,9 +30,9 @@
     "tailwindcss": "^4.1.14",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "npm:rolldown-vite@7.1.14"
+    "vite": "npm:rolldown-vite@^7.1.14"
   },
   "overrides": {
-    "vite": "npm:rolldown-vite@7.1.14"
+    "vite": "^5.4.2"
   }
 }
