--- a/backend/Dockerfile.cloudrun
+++ b/backend/Dockerfile.cloudrun
@@ -34,7 +34,7 @@ EXPOSE 8080
 
 # ヘルスチェック（Cloud Run用）
 HEALTHCHECK --interval=60s --timeout=10s --start-period=10s --retries=2 \
-    CMD curl -f http://localhost:8080/api/health || exit 1
+    CMD curl -f http://localhost:8080/api/version || exit 1
 
 # プロダクション起動コマンド
 CMD exec uvicorn app.main:app \
