--- a/frontend/4dathome-app/tsconfig.json
+++ b/frontend/4dathome-app/tsconfig.json
@@ -9,5 +9,5 @@
     "baseUrl": ".",
     "paths": { "@/*": ["src/*"] }
   },
-  "include": ["src"]
+  "include": ["src", "vite-env.d.ts", "vite.config.ts"]
 }
