タイムラインJSONの送受信実装

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -35,8 +35,12 @@ CLOUD_PROJECT_ID="your-project-id"
 CLOUD_RUN_SERVICE_NAME="4dx-home-backend-api"
 CLOUD_REGION="asia-northeast1"
 
-# バックエンドAPI URL（本番環境）
-# 注意: デプロイ後に自動生成されるURLを設定
-# 例: https://4dx-home-backend-api-XXXXXXXXXX.asia-northeast1.run.app
-BACKEND_API_URL=""
-BACKEND_WS_URL=""
+# Backend API URL (Cloud Run)
+# 開発環境: http://localhost:8000
+# 本番環境: https://fdx-home-backend-api-XXXXXXXXXX.asia-northeast1.run.app
+BACKEND_API_URL="http://localhost:8000"
+
+# WebSocket URL
+# 開発環境: ws://localhost:8000
+# 本番環境: wss://fdx-home-backend-api-XXXXXXXXXX.asia-northeast1.run.app
+BACKEND_WS_URL="ws://localhost:8000"
