--- a/frontend/4dathome-app/package.json
+++ b/frontend/4dathome-app/package.json
@@ -7,12 +7,14 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3",
-    "vite": "^7.1.9"
+    "vite": "^7.1.9",
+    "ws": "^8.18.0"
   },
   "scripts": {
     "dev": "vite",
     "build": "tsc -noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:conn": "node scripts/conn-test.mjs"
   },
   "dependencies": {
     "react": "^18.3.1",
