security: 機密情報（Cloud Run URL）をGit追跡から除外
- .gitignoreに機密ファイルを追加（md, ps1, html）
- 実際のURLを含むファイルをGit追跡から削除
  - .github/copilot-instructions.md
  - backend/DEPLOYMENT_GUIDE.md
  - communication_test_dashboard.html
- プレースホルダー版のexampleファイルを作成
  - TESTING_GUIDE.example.md
  - QUICK_START.example.md
  - backend/DEPLOYMENT_GUIDE.example.md
- backend/app/config/settings.pyのデフォルトURLをプレースホルダーに変更
- SECURITY.md（機密情報管理ガイド）を新規作成

feat: Raspberry Pi デバイスハブサーバー実装 (rpi_server)
- 完全なRaspberry Pi向けサーバー実装（30+ファイル）
- WebSocket, MQTT, Timeline処理, Flask統合
- 古いdevice-hubディレクトリを削除

fix: デバイステストのタイムアウト延長
- backend: 5秒 → 30秒
- frontend: デバイステスト用に90秒タイムアウト設定

--- a/.gitignore
+++ b/.gitignore
@@ -71,10 +71,20 @@ backend/debug/
 debug/
 test_received_jsons/
 
+# 機密情報を含むドキュメント・スクリプト（実際のCloud Run URLを含むため除外）
+/TESTING_GUIDE.md
+/QUICK_START.md
+/quick_start_test.ps1
+/backend/DEPLOYMENT_GUIDE.md
+/.github/copilot-instructions.md
+/communication_test_dashboard.html
+
 # Debug frontend (API test tool - local use only)
 debug_frontend/
 
 debug_hardware/
+
+4DXHOME/
 
 # Database and data files
 *.db
