--- a/backend/.env.example
+++ b/backend/.env.example
@@ -31,8 +31,8 @@ WS_MESSAGE_MAX_SIZE="10485760"
 
 # Cloud設定（本番環境）
 # 注意: 実際の値は .env ファイルに記載し、Gitにコミットしないでください
-CLOUD_PROJECT_ID="your-project-id"
-CLOUD_RUN_SERVICE_NAME="4dx-home-backend-api"
+CLOUD_PROJECT_ID="fourdk-home-2024"
+CLOUD_RUN_SERVICE_NAME="fdx-home-backend-api"
 CLOUD_REGION="asia-northeast1"
 
 # Backend API URL (Cloud Run)
@@ -44,3 +44,6 @@ BACKEND_API_URL="http://localhost:8000"
 # 開発環境: ws://localhost:8000
 # 本番環境: wss://fdx-home-backend-api-XXXXXXXXXX.asia-northeast1.run.app
 BACKEND_WS_URL="ws://localhost:8000"
+
+# CORS設定（本番環境では実際のCloud Run URLを追加）
+# 例: CORS_ORIGINS="http://localhost:3000,...,https://fdx-home-backend-api-XXXXXXXXXX.asia-northeast1.run.app"
