feat(hardware): エフェクトクールダウン機能実装
- 水エフェクトに3秒間のクールダウン実装（物理デバイス保護）
- 環境変数による柔軟なクールダウン設定（.env.example更新）
- Config.py に WATER/WIND/VIBRATION/COLOR_COOLDOWN_SEC 追加
- processor.py にクールダウンチェックロジック実装
- サーバー再起動・停止スクリプト追加（運用性向上）

--- a/hardware/rpi_server/.env.example
+++ b/hardware/rpi_server/.env.example
@@ -24,6 +24,13 @@ SYNC_TOLERANCE_MS=100
 TIMELINE_CACHE_DIR="data/timeline_cache"
 COMMUNICATION_LOG_DIR="data/communication_logs"
 
+# === エフェクトクールダウン設定（秒） ===
+# 各エフェクトの最小実行間隔を設定（0.0で無効化）
+WATER_COOLDOWN_SEC=3.0
+WIND_COOLDOWN_SEC=0.0
+VIBRATION_COOLDOWN_SEC=0.0
+COLOR_COOLDOWN_SEC=0.0
+
 # === ログ設定 ===
 LOG_LEVEL="INFO"
 LOG_FILE="data/rpi_server.log"
