feat: ストップ信号処理と時間許容範囲の実装
## 追加機能

### 1. ストップ信号処理
- バックエンドAPI: POST /api/playback/stop/{session_id} エンドポイント追加
- WebSocket: stop_signal メッセージタイプ対応
- Raspberry Pi: 全アクチュエータ停止MQTT送信機能

#### 実装ファイル
- backend/app/api/playback_control.py
  - send_stop_signal() REST API追加
  - relay_stop_signal_to_devices() 並列送信関数
  - WebSocket stop_signal ハンドラー追加

- hardware/rpi_server/main.py
  - _on_stop_signal_received() コールバック追加
  - タイムライン停止 + MQTT停止コマンド送信

- hardware/rpi_server/src/api/message_handler.py
  - _handle_stop_signal() メソッド追加
  - on_stop_signal コールバック統合

- hardware/rpi_server/src/mqtt/event_mapper.py
  - get_stop_all_commands() クラスメソッド追加
  - 全アクチュエータOFFコマンド生成 (wind, light, motor1/2)

### 2. 時間許容範囲の明確化
- デフォルト: ±100ms (0.1秒)
- イベント実行範囲の詳細ドキュメント化

#### 実装ファイル
- hardware/rpi_server/src/timeline/processor.py
  - _process_events_at_time() に詳細docstring追加
  - デバッグログで時間差とtolerance表示

- hardware/rpi_server/.env.example
  - SYNC_TOLERANCE_MS の説明コメント追加
  - 実行例: 1.0秒イベントは0.9~1.1秒で実行

- hardware/rpi_server/README.md
  - 同期精度セクションに詳細説明追加
  - ネットワーク遅延考慮の設定値提示

- hardware/rpi_server/TIME_TOLERANCE_SPEC.md (新規)
  - 包括的な時間許容範囲仕様書
  - 実行例、設定方法、テスト手順

## その他
- .gitignore: docs/project_report/ を除外リストに追加

## 関連ドキュメント
- debug_frontend/STOP_SIGNAL_SPEC.md (既存)
- hardware/rpi_server/TIME_TOLERANCE_SPEC.md (新規)

--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,7 @@ api_keys.txt
 
 # デプロイ情報・機密URL情報（backend-report全体を除外）
 docs/backend-report/
+docs/project_report/
 
 # Debug and test files (debug folder)
 backend/debug/
