--- a/hardware/rpi_server/.env.example
+++ b/hardware/rpi_server/.env.example
@@ -20,6 +20,9 @@ FLASK_PORT=8000
 FLASK_DEBUG=False
 
 # === Timeline処理設定 ===
+# SYNC_TOLERANCE_MS: イベント実行の時間許容範囲（ミリ秒）
+# 例: 100ms の場合、1.0秒のイベントは 0.9~1.1秒の範囲で実行されます
+# デフォルト: 100ms (±0.1秒)
 SYNC_TOLERANCE_MS=100
 TIMELINE_CACHE_DIR="data/timeline_cache"
 COMMUNICATION_LOG_DIR="data/communication_logs"
