--- a/frontend/4dathome-app/.gitignore
+++ b/frontend/4dathome-app/.gitignore
@@ -28,3 +28,6 @@ dist-ssr
 *.sw?
 frontend/4dathome-app/public/video/*.mp4
 frontend/4dathome-app/public/video/*.mp4
+[frontend/4dathome-app/public/video/demo*.mp4]
+[frontend/4dathome-app/public/thumbs/demo*.jpeg]
+[frontend/4dathome-app/public/json/demo*.json]
